--- a/phone-commerce/src/main/resources/templates/Login.html
+++ b/phone-commerce/src/main/resources/templates/Login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TLO Shop</title>
+  <title>PhuQuoc-Shop</title>
   <link rel="stylesheet" th:href="@{Login.css}" />
 
 </head>
@@ -24,10 +24,10 @@
       <div class="forms-wrap">
         <form th:action="@{/PerformLogin}" autocomplete="off" class="sign-in-form" method="post">
           <div class="logo">
-            <h4>TLOShop</h4>
+            <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng TLOShop</h2>
+            <h2>Chào Mừng PhuQuoc-Shop</h2>
             <h6>Đăng Kí Tài Khoản</h6>
             <a th:href="@{/Register}">
               <button type="button" class="toggle" >
@@ -60,7 +60,7 @@
       </div>
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/Login_SiginUp_img/Login_SignUp.png}" class="image img-1 show" alt="" />
+          <img th:src="@{/login_img/login.png}" class="image img-1 show" alt="" />
         </div>
       </div>
     </div>
