--- a/phone-commerce/src/main/resources/templates/Register.html
+++ b/phone-commerce/src/main/resources/templates/Register.html
@@ -13,13 +13,12 @@
   <div class="box">
     <div class="inner-box">
       <div class="forms-wrap">
-        <!-- Đăng Kí  _____________________________________________________________ -->
         <form th:action="@{/Register}"  method="post" th:object="${newUser}" autocomplete="off" class="sign-up-form">
           <div class="logo">
-            <h4>TLOShop</h4>
+            <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng TLOShop</h2>
+            <h2>Chào Mừng PhuQuoc-Shop</h2>
             <h6>Nếu Bạn Có Tài Khoản </h6>
             <a th:href="@{/Login}">
               <button type="button" class="toggle" >
@@ -42,7 +41,7 @@
             </div>
             <div class="input-wrap">
               <input type="password" th:field="*{password}" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
-              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/Login_SiginUp_img/eye.svg}"></button>
+              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/login_img/eye.svg}"></button>
             </div>
 
             <input type="submit" value="Đăng Kí" class="sign-btn" />
@@ -50,7 +49,7 @@
             <p class="text">
               Được Thực Hiện
               <br>
-              52100820_Nguyễn Lâm Thành Long
+              52100827 - Đinh Phú Quốc
             </p>
           </div>
         </form>
@@ -58,7 +57,7 @@
 
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/Login_SiginUp_img/Login_SignUp.png}" class="image img-1 show" alt="">
+          <img th:src="@{/login_img/login.png}" class="image img-1 show" alt="">
         </div>
       </div>
     </div>
