--- a/phone-commerce/src/main/resources/templates/Register.html
+++ b/phone-commerce/src/main/resources/templates/Register.html
@@ -13,14 +13,14 @@
   <div class="box">
     <div class="inner-box">
       <div class="forms-wrap">
-        <form th:action="@{/Register}"  method="post" th:object="${newUser}" autocomplete="off" class="sign-up-form">
+        <form th:action="@{/register}"  method="post" th:object="${newUser}" autocomplete="off" class="sign-up-form">
           <div class="logo">
             <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
             <h2>Chào Mừng PhuQuoc-Shop</h2>
             <h6>Nếu Bạn Có Tài Khoản </h6>
-            <a th:href="@{/Login}">
+            <a th:href="@{/login}">
               <button type="button" class="toggle" >
               <h6>Đăng Nhập</h6>
             </button>
@@ -28,20 +28,28 @@
           </div>
           <div class="actual-form">
             <div class="input-wrap">
-              <input type="text" th:field="*{userName}" class="input-field" autocomplete="off" required placeholder="Username"/>
+              <label>
+                <input type="text" th:field="*{userName}" class="input-field" autocomplete="off" required placeholder="Username"/>
+              </label>
             </div>
             <div class="input-wrap">
-              <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>
+              <label>
+                <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>
+              </label>
             </div>
             <div class="input-wrap">
-              <input type="text" th:field="*{name}" minlength="4" class="input-field" autocomplete="off" required placeholder="Name"/>
+              <label>
+                <input type="text" th:field="*{name}" minlength="4" class="input-field" autocomplete="off" required placeholder="Name"/>
+              </label>
             </div>
             <div class="input-wrap">
-              <input type="text" th:field="*{phoneNumber}" minlength="4" class="input-field" autocomplete="off" required placeholder="Phonenumber"/>
+              <label>
+                <input type="text" th:field="*{phoneNumber}" minlength="4" class="input-field" autocomplete="off" required placeholder="Phonenumber"/>
+              </label>
             </div>
             <div class="input-wrap">
-              <input type="password" th:field="*{password}" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
-              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/login_img/eye.svg}"></button>
+              <label for="passwordField"></label><input type="password" th:field="*{password}" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
+              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/login_img/eye.svg}" alt="hide/see password"></button>
             </div>
 
             <input type="submit" value="Đăng Kí" class="sign-btn" />
