--- a/phone-commerce/src/main/resources/templates/Login.html
+++ b/phone-commerce/src/main/resources/templates/Login.html
@@ -21,14 +21,14 @@
 <!--    Login form-->
     <div class="inner-box">
       <div class="forms-wrap">
-        <form th:action="@{/PerformLogin}" autocomplete="off" class="sign-in-form" method="post">
+        <form th:action="@{/process-login}" autocomplete="off" class="sign-in-form" method="post">
           <div class="logo">
             <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
             <h2>Chào Mừng PhuQuoc-Shop</h2>
             <h6>Đăng Kí Tài Khoản</h6>
-            <a th:href="@{/Register}">
+            <a th:href="@{/register}">
               <button type="button" class="toggle" >
                 <h6>Đăng Kí</h6>
               </button>
