--- a/phone-commerce/src/main/resources/templates/ForgetPassword.html
+++ b/phone-commerce/src/main/resources/templates/ForgetPassword.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TLO Shop</title>
-  <link rel="stylesheet" th:href="@{Login.css}" />
+  <link rel="stylesheet" th:href="@{/css/Login.css}" />
 
 </head>
 
@@ -20,7 +20,7 @@
           <div th:if="${error != null}">
               <p class="text-danger">[[${error}]]</p>
           </div>
-        <form th:action="@{/forgot_password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${user}">
+        <form th:action="@{/forgot_password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${users}">
           <div class="logo">
             <h4>TLOShop</h4>
           </div>
@@ -36,7 +36,7 @@
           <h2>Quên Mật Khẩu</h2>
           <div class="actual-form">
             <div class="input-wrap">
-              <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>
+<!--              <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>-->
             </div>
             <input type="submit" value="Tìm Kiếm Tài Khoản" class="sign-btn" />
           </div>
@@ -45,14 +45,14 @@
       </div>
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/Login_SiginUp_img/Login_SignUp.png}" class="image img-1 show" alt="" />
+          <img th:src="@{/image/login_img/login.png}" class="image img-1 show" alt="" />
         </div>
       </div>
     </div>
   </div>
 </main>
 
-<script th:src="@{/Login.js}"></script>
+<script th:src="@{/javascript/Login.js}"></script>
 </body>
 
 </html>
