--- a/phone-commerce/src/main/resources/templates/Register.html
+++ b/phone-commerce/src/main/resources/templates/Register.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TLO Shop - Register</title>
-  <link rel="stylesheet" th:href="@{/Register.css}" />
+  <link rel="stylesheet" th:href="@{/css/Register.css}" />
 </head>
 <body>
 <main class="sign-up-mode">
@@ -49,7 +49,7 @@
             </div>
             <div class="input-wrap">
               <label for="passwordField"></label><input type="password" th:field="*{password}" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
-              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/login_img/eye.svg}" alt="hide/see password"></button>
+              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/image/login_img/eye.svg}" alt="hide/see password"></button>
             </div>
 
             <input type="submit" value="Đăng Kí" class="sign-btn" />
@@ -65,13 +65,13 @@
 
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/login_img/login.png}" class="image img-1 show" alt="">
+          <img th:src="@{/image/login_img/login.png}" class="image img-1 show" alt="">
         </div>
       </div>
     </div>
   </div>
 </main>
-<script th:src="@{/Register.js}"></script>
+<script th:src="@{/javascript/Register.js}"></script>
 </body>
 
 </html>
