add forgot password part 2 ~~

--- a/phone-commerce/src/main/resources/templates/ForgetPassword.html
+++ b/phone-commerce/src/main/resources/templates/ForgetPassword.html
@@ -20,12 +20,12 @@
           <div th:if="${error != null}">
               <p class="text-danger">[[${error}]]</p>
           </div>
-        <form th:action="@{/forgot_password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${users}">
+        <form th:action="@{/forgot_password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${user}">
           <div class="logo">
-            <h4>TLOShop</h4>
+            <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng TLOShop</h2>
+            <h2>Chào Mừng PhuQuoc-Shop</h2>
             <h6>Đăng Nhập Tài Khoản</h6>
             <a th:href="@{/Login}">
               <button type="button" class="toggle" >
@@ -36,7 +36,7 @@
           <h2>Quên Mật Khẩu</h2>
           <div class="actual-form">
             <div class="input-wrap">
-<!--              <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>-->
+              <input type="email" th:field="*{email}" class="input-field" autocomplete="off" required placeholder="Email"/>
             </div>
             <input type="submit" value="Tìm Kiếm Tài Khoản" class="sign-btn" />
           </div>
