--- a/phone-commerce/src/main/resources/templates/Login.html
+++ b/phone-commerce/src/main/resources/templates/Login.html
@@ -51,7 +51,7 @@
             <br>
             <input type="submit" value="Đăng Nhập" class="sign-btn" />
             <p class="text" style="text-decoration: none; font-size: 13px;" >
-              <a th:href="@{/forgot_password}">Quên Mật Khẩu</a>
+              <a th:href="@{/forgot-password}">Quên Mật Khẩu</a>
             </p>
           </div>
         </form>
