--- a/phone-commerce/src/main/resources/templates/ForgetPassword.html
+++ b/phone-commerce/src/main/resources/templates/ForgetPassword.html
@@ -20,14 +20,14 @@
           <div th:if="${error != null}">
               <p class="text-danger">[[${error}]]</p>
           </div>
-        <form th:action="@{/forgot_password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${user}">
+        <form th:action="@{/forgot-password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${user}">
           <div class="logo">
             <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
             <h2>Chào Mừng PhuQuoc-Shop</h2>
-            <h6>Đăng Nhập Tài Khoản</h6>
-            <a th:href="@{/Login}">
+            <h6>Quên mật khẩu</h6>
+            <a th:href="@{/login}">
               <button type="button" class="toggle" >
                 <h6>Đăng Nhập</h6>
               </button>
