add model for product ~~

--- a/phone-commerce/src/main/resources/templates/Cart.html
+++ b/phone-commerce/src/main/resources/templates/Cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" th:href="@{/HomePage.css}">
+    <link rel="stylesheet" th:href="@{/css/HomePage.css}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
     <link rel="stylesheet" th:href="@{/Cart_fonts/icomoon/style.css}">
     <link rel="stylesheet" th:href="@{/Cart_Css/bootstrap.min.css}">
