--- a/phone-commerce/src/main/resources/templates/admin_template/admin_home.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_home.html
@@ -25,49 +25,57 @@
       <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary col-lg-2" id="sidebar"
         style="min-height: 100vh;">
         <ul class="nav nav-pills flex-column mb-auto list-item">
-          <a href="/Admin"
+
+          <a href="/admin"
             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"></svg>
             <span class="fs-4"><i class="fas fa-shopping-cart"></i>PhuQuoc-Shop</span>
           </a>
+
           <hr>
           <li class="nav-item">
-            <a href="/Admin" class="nav-link active invidual-item" aria-current="page">
+            <a href="/admin" class="nav-link active invidual-item" aria-current="page">
               <img th:src="@{/admin_logo/house-door.svg}" alt="">
               Trang Chủ
             </a>
           </li>
+
           <li class="nav-item">
-          <a href="/Admin/Product" class="nav-link link-body-emphasis invidual-item">
+          <a href="/admin/product" class="nav-link link-body-emphasis invidual-item">
 
             <img th:src="@{/admin_logo/box2.svg}" alt="">
               Sản Phẩm
             </a>
           </li>
+
           <li class="nav-item">
-          <a href="/Admin/Category" class="nav-link link-body-emphasis invidual-item">
+          <a href="/admin/category" class="nav-link link-body-emphasis invidual-item">
             <img th:src="@{/admin_logo/grid-3x3.svg}" alt="">
               Danh Mục
             </a>
           </li>
+
           <li class="nav-item">
-            <a href="/Admin/Color" class="nav-link link-body-emphasis invidual-item">
+            <a href="/admin/color" class="nav-link link-body-emphasis invidual-item">
               <img th:src="@{/admin_logo/paint-bucket.svg}" alt="">
               Màu Sắc
             </a>
           </li>
+
           <li class="nav-item">
-            <a href="/Admin/Brand" class="nav-link link-body-emphasis invidual-item">
+            <a href="/admin/brand" class="nav-link link-body-emphasis invidual-item">
               <img th:src="@{/admin_logo/slack.svg}" alt="">
               Thương Hiệu
             </a>
           </li>
+
           <li class="nav-item">
-          <a href="/Admin/Order" class="nav-link link-body-emphasis invidual-item">
+          <a href="/admin/order" class="nav-link link-body-emphasis invidual-item">
             <img th:src="@{/admin_logo/bag-dash.svg}" alt="">
               Quản Lý Đơn Hàng
             </a>
           </li>
+
         </ul>
       </div>
       <!-- ____________________________________________________________________________________________-->
@@ -116,7 +124,7 @@
                 <div class="card shadow-sm">
                   <img th:src="@{/homepage_img/iphone-15-pro-max-black-2-1.jpg}" alt="" style="width: 100%; height: 300px;">
                   <div class="card-body">
-                    <p class="card-text">TLOShop Xin Hỗ Trợ Tất Cả Các Mặt Hàng</p>
+                    <p class="card-text">PhuQuoc-Shop Xin Hỗ Trợ Tất Cả Các Mặt Hàng</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
