--- a/phone-commerce/src/main/resources/templates/admin_template/admin_colors.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_colors.html
@@ -26,7 +26,7 @@
       <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary col-lg-2" id="sidebar"
         style="min-height: 100vh;">
         <ul class="nav nav-pills flex-column mb-auto list-item">
-          <a href="/Admin"
+          <a href="/admin"
             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"></svg>
             <span class="fs-4"><i class="fas fa-shopping-cart"></i>PQShop</span>
@@ -115,8 +115,8 @@
                       <td th:text="${color.getId()}"></td>
                       <td th:text="${color.getName()}"></td>
                       <td>
-                        <button type="button" class="btn btn-success"><a th:href="@{/editColor/{id}(id=${color.getId()})}"><img th:src="@{/admin_logo/pencil-square.svg}" alt=""></a></button>
-                        <button type="button" class="btn btn-danger"><a th:href="@{/deleteColor/{id}(id=${color.getId()})}"><img th:src="@{/admin_logo/trash.svg}" alt=""></a></button>
+                        <button type="button" class="btn btn-success"><a th:href="@{/admin/color/edit/{id}(id=${color.getId()})}"><img th:src="@{/admin_logo/pencil-square.svg}" alt=""></a></button>
+                        <button type="button" class="btn btn-danger"><a th:href="@{/admin/color/del/{id}(id=${color.getId()})}"><img th:src="@{/admin_logo/trash.svg}" alt=""></a></button>
                       </td>
                     </tr>
 
