add edit brand page~~

--- a/phone-commerce/src/main/resources/templates/Register.html
+++ b/phone-commerce/src/main/resources/templates/Register.html
@@ -18,7 +18,7 @@
             <h4>PhuQuoc-Shop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng PhuQuoc-Shop</h2>
+            <h2>Chào Mừng PQShop</h2>
             <h6>Nếu Bạn Có Tài Khoản </h6>
             <a th:href="@{/login}">
               <button type="button" class="toggle" >
