--- a/phone-commerce/src/main/resources/templates/homepage.html
+++ b/phone-commerce/src/main/resources/templates/homepage.html
@@ -162,7 +162,7 @@
                         <img src="/homepage_img/blogs/blog2.jpg" alt="">
                     </div>
                     <div class="content">
-                        <h3>Hãy Đến với TLOShop </h3>
+                        <h3>Hãy Đến với PQShop </h3>
                         <p>Hân Hạnh Được Phục Vụ Quý Khách Hàng</p>
                         <a href="#" class="btn">Đọc Thêm</a>
                         <div class="icons">
@@ -192,7 +192,7 @@
                         <img src="/homepage_img/blogs/blog4.jpg" alt="">
                     </div>
                     <div class="content">
-                        <h3>Hãy Đến với TLOShop </h3>
+                        <h3>Hãy Đến với PQShop </h3>
                         <p>Hân Hạnh Được Phục Vụ Quý Khách Hàng</p>
                         <a href="#" class="btn">Đọc Thêm</a>
                         <div class="icons">
