--- a/phone-commerce/src/main/resources/templates/homepage.html
+++ b/phone-commerce/src/main/resources/templates/homepage.html
@@ -36,10 +36,10 @@
             <a href="#" class="fas fa-heart"></a>
         </div>
 
-        <form action="" class="search-form" onkeydown="searchBox()">
-            <input type="text" name="search" id="search-box" placeholder="Search here... ">
-            <label class="fas fa-search"></label>
-        </form>
+<!--        <form action="" class="search-form" onkeydown="searchBox()">-->
+<!--            <input type="text" name="search" id="search-box" placeholder="Search here... ">-->
+<!--            <label class="fas fa-search"></label>-->
+<!--        </form>-->
 
 
     </header>
@@ -203,11 +203,11 @@
 
         </div>
         <div class="share">
-            <a href="https://www.facebook.com/NguyenLamThanhLong" class="fab fa-facebook-f"></a>
-            <a href="https://www.tiktok.com/@longndp_" class="fab fa-twitter"></a>
-            <a href="https://github.com/thanhlongqax" class="fab fa-pinterest"></a>
-            <a href="https://www.linkedin.com/in/nguyenlamthanhlong" class="fab fa-linkedin"></a>
-            <a href="https://www.instagram.com/longndp" class="fab fa-instagram"></a>
+            <a href="" class="fab fa-facebook-f"></a>
+            <a href="" class="fab fa-twitter"></a>
+            <a href="" class="fab fa-pinterest"></a>
+            <a href="" class="fab fa-linkedin"></a>
+            <a href="" class="fab fa-instagram"></a>
         </div>
     </section>
 
