--- a/phone-commerce/src/main/resources/templates/ForgetPassword.html
+++ b/phone-commerce/src/main/resources/templates/ForgetPassword.html
@@ -22,10 +22,10 @@
           </div>
         <form th:action="@{/forgot-password}"  autocomplete="off" class="sign-in-form" method="post" th:object="${user}">
           <div class="logo">
-            <h4>PhuQuoc-Shop</h4>
+            <h4>PQShop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng PhuQuoc-Shop</h2>
+            <h2>Chào Mừng PQShop</h2>
             <h6>Quên mật khẩu</h6>
             <a th:href="@{/login}">
               <button type="button" class="toggle" >
@@ -45,7 +45,7 @@
       </div>
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/image/login_img/login.png}" class="image img-1 show" alt="" />
+          <img th:src="@{/image/login/login.png}" class="image img-1 show" alt="" />
         </div>
       </div>
     </div>
