--- a/phone-commerce/src/main/resources/templates/Login.html
+++ b/phone-commerce/src/main/resources/templates/Login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PhuQuoc-Shop</title>
+  <title>PQShop</title>
   <link rel="stylesheet" th:href="@{/css/Login.css}" />
 
 </head>
@@ -23,10 +23,10 @@
       <div class="forms-wrap">
         <form th:action="@{/process-login}" autocomplete="off" class="sign-in-form" method="post">
           <div class="logo">
-            <h4>PhuQuoc-Shop</h4>
+            <h4>PQShop</h4>
           </div>
           <div class="heading">
-            <h2>Chào Mừng PhuQuoc-Shop</h2>
+            <h2>Chào Mừng PQShop</h2>
             <h6>Đăng Kí Tài Khoản</h6>
             <a th:href="@{/register}">
               <button type="button" class="toggle" >
@@ -44,7 +44,7 @@
 
             <div class="input-wrap">
               <input  type="password" name="password" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
-              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/image/login_img/eye.svg}" alt="Welcome to my shop"></button>
+              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/image/login/eye.svg}" alt="Welcome to my shop"></button>
             </div>
             <input type="checkbox" name="same" checked="checked" value="Remember me">Remember me
             <br>
@@ -59,7 +59,7 @@
       </div>
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/image/login_img/login.png}" class="image img-1 show" alt="" />
+          <img th:src="@{/image/login/login.png}" class="image img-1 show" alt="" />
         </div>
       </div>
     </div>
