--- a/phone-commerce/src/main/resources/templates/Register.html
+++ b/phone-commerce/src/main/resources/templates/Register.html
@@ -15,7 +15,7 @@
       <div class="forms-wrap">
         <form th:action="@{/register}"  method="post" th:object="${newUser}" autocomplete="off" class="sign-up-form">
           <div class="logo">
-            <h4>PhuQuoc-Shop</h4>
+            <h4>PQShop</h4>
           </div>
           <div class="heading">
             <h2>Chào Mừng PQShop</h2>
@@ -41,7 +41,7 @@
             </div>
             <div class="input-wrap">
               <label for="passwordField"></label><input type="password" th:field="*{password}" minlength="4" class="input-field" autocomplete="off" required placeholder="Password" id="passwordField"/>
-              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/image/login_img/eye.svg}" alt="hide/see password"></button>
+              <button type="button" onclick="togglePasswordVisibility()" class="round-button"><img th:src="@{/image/login/eye.svg}" alt="hide/see password"></button>
             </div>
 
             <input type="submit" value="Đăng Kí" class="sign-btn" />
@@ -57,7 +57,7 @@
 
       <div class="carousel">
         <div class="images-wrapper">
-          <img th:src="@{/image/login_img/login.png}" class="image img-1 show" alt="">
+          <img th:src="@{/image/login/login.png}" class="image img-1 show" alt="">
         </div>
       </div>
     </div>
