--- a/phone-commerce/src/main/resources/templates/admin_template/admin_category.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_category.html
@@ -30,7 +30,7 @@
           <a href="/admin"
              class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"></svg>
-            <span class="fs-4"><i class="fas fa-shopping-cart"></i>PhuQuoc-Shop</span>
+            <span class="fs-4"><i class="fas fa-shopping-cart"></i>PQShop</span>
           </a>
 
           <hr>
