--- a/phone-commerce/src/main/resources/templates/admin_template/admin_edit-category.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_edit-category.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" th:href="@{css/admin_Css/style.css}" />
+    <link rel="stylesheet" th:href="@{css/admin/style.css}" />
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
@@ -25,12 +25,12 @@
             <form enctype="multipart/form-data" method="post" th:action="@{/admin/color/edit/{id}(id=${category.getId()})}" th:object="${category}">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label>Category ID</label>
-                        <input class="form-control" name="id" readonly required th:field="*{id}" type="text">
+                        <label for="id">Category ID</label>
+                        <input class="form-control" name="id" readonly required th:field="*{id}" type="text" id="id">
                     </div>
                     <div class="form-group">
-                        <label>Name</label>
-                        <input class="form-control" name="name" required th:field="*{name}" type="text">
+                        <label for="name">Name</label>
+                        <input class="form-control" name="name" required th:field="*{name}" type="text" id="name">
                     </div>
                 </div>
                 <div class="modal-footer">
