--- a/phone-commerce/src/main/resources/templates/admin_template/admin_edit-product.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_edit-product.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" th:href="@{css/admin_Css/style.css}" />
+    <link rel="stylesheet" th:href="@{css/admin/style.css}" />
     <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
           referrerpolicy="no-referrer" rel="stylesheet"/>
@@ -26,20 +26,20 @@
                   th:object="${product}">
                 <div class="modal-body">
                     <div class="form-group">
-                        <label>Product ID</label>
-                        <input class="form-control" name="id" readonly required th:field="*{id}" type="text">
+                        <label for="id">Product ID</label>
+                        <input class="form-control" name="id" readonly required th:field="*{id}" type="text" id="id">
                     </div>
                     <div class="form-group">
-                        <label>Name</label>
-                        <input class="form-control" name="name" required th:field="*{name}" type="text">
+                        <label for="name">Name</label>
+                        <input class="form-control" name="name" required th:field="*{name}" type="text" id="name">
                     </div>
                     <div class="form-group">
-                        <label>Price</label>
-                        <input class="form-control" name="price" required th:field="*{price}" type="text">
+                        <label for="price">Price</label>
+                        <input class="form-control" name="price" required th:field="*{price}" type="text" id="price">
                     </div>
                     <div class="form-group">
-                        <label>Description</label>
-                        <textarea class="form-control" name="description" required th:field="*{description}"></textarea>
+                        <label for="description">Description</label>
+                        <textarea class="form-control" name="description" required th:field="*{description}" id="description"></textarea>
                     </div>
                     <!-- image-->
                     <label>Image</label>
@@ -49,21 +49,21 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Color</label>
+                        <label for="color">Color</label>
                         <select class="form-control" id="color" name="color" th:field="*{color}">
                             <option th:each="color: ${colors}" th:text="${color.getName()}" th:value="${color.getId()}"></option>
                         </select>
                     </div>
 
                     <div class="form-group">
-                        <label>Brand</label>
+                        <label for="brand">Brand</label>
                         <select class="form-control" id="brand" name="brand" th:field="*{brand}">
                             <option th:each="brand: ${brands}" th:text="${brand.getName()}" th:value="${brand.getId()}"></option>
                         </select>
                     </div>
                     <!-- category-->
                     <div class="form-group">
-                        <label>Category</label>
+                        <label for="category">Category</label>
                         <select class="form-control" id="category" name="category" th:field="*{category}">
                             <option th:each="category: ${categories}" th:text="${category.getName()}"
                                     th:value="${category.getId()}">
