--- a/phone-commerce/src/main/resources/templates/admin_template/admin_home.html
+++ b/phone-commerce/src/main/resources/templates/admin_template/admin_home.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <title>PhuQuoc-Shop Admin</title>
+  <title>PQShop</title>
 
   <!-- Favicons -->
   <link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.css}">
-  <link rel="stylesheet" th:href="@{bootstrap/css/bootstrap-grid.css}">
+<!--  <link rel="stylesheet" th:href="@{bootstrap/css/bootstrap-grid.css}">-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <meta name="theme-color" content="#712cf9">
@@ -29,7 +29,7 @@
           <a href="/admin"
             class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi me-2" width="40" height="32"></svg>
-            <span class="fs-4"><i class="fas fa-shopping-cart"></i>PhuQuoc-Shop</span>
+            <span class="fs-4"><i class="fas fa-shopping-cart"></i>PQShop</span>
           </a>
 
           <hr>
@@ -124,7 +124,7 @@
                 <div class="card shadow-sm">
                   <img th:src="@{/homepage_img/iphone-15-pro-max-black-2-1.jpg}" alt="" style="width: 100%; height: 300px;">
                   <div class="card-body">
-                    <p class="card-text">PhuQuoc-Shop Xin Hỗ Trợ Tất Cả Các Mặt Hàng</p>
+                    <p class="card-text">PQShop Xin Hỗ Trợ Tất Cả Các Mặt Hàng</p>
                     <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -170,12 +170,11 @@
         </div>
 
       </main>
-      </main>
       <!-- ______________________________________________________________________________-->
     </div>
   </div>
-  <script th:src="@{bootstrap/js/bootstrap.js}"></script>
-  <script th:src="@{bootstrap/js/bootstrap.bundle.js}"></script>
+<!--  <script th:src="@{bootstrap/js/bootstrap.js}"></script>-->
+<!--  <script th:src="@{bootstrap/js/bootstrap.bundle.js}"></script>-->
   <script th:src="@{/javascript/Sidebar_Admin.js}"></script>
 </body>
 
