--- a/phone-commerce/src/main/resources/templates/email-template.html
+++ b/phone-commerce/src/main/resources/templates/email-template.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <div class="container">
-    <a href="http://localhost:8080" class="logo"> <i class="fas fa-shopping-cart"></i>PhuQuoc-Shop </a>
+    <a href="http://localhost:8080" class="logo"> <i class="fas fa-shopping-cart"></i>PQShop </a>
     <h1 style="text-align: center;">Mật Khẩu Mới Của Bạn</h1>
     <h3 th:text="${message}" style="text-align: center;">Default message</h3>
 
