--- a/phone-commerce/src/main/resources/templates/ForgetPassword.html
+++ b/phone-commerce/src/main/resources/templates/ForgetPassword.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TLO Shop</title>
+  <title>PQShop</title>
   <link rel="stylesheet" th:href="@{/css/Login.css}" />
 
 </head>
