--- a/phone-commerce/src/main/resources/templates/product-details.html
+++ b/phone-commerce/src/main/resources/templates/product-details.html
@@ -16,7 +16,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/Detail_Style.css}" rel="stylesheet">
+    <link th:href="@{/css/Detail_Style.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -194,7 +194,7 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{/DetailProduct.js}"></script>
+    <script th:src="@{/javascript/DetailProduct.js}"></script>
 </body>
 
 </html>
