minor fix html ~~

--- a/phone-commerce/src/main/resources/templates/cart.html
+++ b/phone-commerce/src/main/resources/templates/cart.html
@@ -52,7 +52,7 @@
     <div class="bg-light py-3" style="margin-top: 80px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 mb-0"><a href="/HomePage">Trang Chủ</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Giỏ Hàng</strong></div>
+                <div class="col-md-12 mb-0"><a href="/homepage">Trang Chủ</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Giỏ Hàng</strong></div>
             </div>
         </div>
     </div>
@@ -83,7 +83,7 @@
                 <div class="col-md-6">
                     <div class="row mb-5">
                         <div class="col-md-6">
-                            <button class="btn btn-outline-primary btn-sm btn-block"><a href="/HomePage">Tiếp Tục Mua Sắm</a></button>
+                            <button class="btn btn-outline-primary btn-sm btn-block"><a href="/homepage">Tiếp Tục Mua Sắm</a></button>
                         </div>
                     </div>
                     <div class="row">
