--- a/phone-commerce/src/main/resources/templates/product-details.html
+++ b/phone-commerce/src/main/resources/templates/product-details.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="tab-pane fade" id="tab-pane-2">
                         <h4 class="mb-3">Thông tin </h4>
-                        <p>Liên hệ Admin : thanhlongqax@gmail.com</p>
+                        <p>Liên hệ Admin : dinhphuquoc2003@gmail.com</p>
                     </div>
                     <div class="tab-pane fade" id="tab-pane-3">
                         <div class="row">
