--- a/phone-commerce/src/main/resources/templates/orders-details.html
+++ b/phone-commerce/src/main/resources/templates/orders-details.html
@@ -24,7 +24,7 @@
                 <div class="card" style="border-radius: 41px;">
                     <div class="card-header px-4 py-5">
                         <h5 class="text-muted mb-0">Cảm Ơn Quý Khách Đã Đặt Hàng, <span style="color: #a8729a;"
-                                                                                 th:text="${order}"></span>!
+                                                                                 th:text="${orderDetails.getOrderCreated()}"></span>!
                         </h5>
                     </div>
                     <div class="card-body p-4">
