--- a/phone-commerce/src/main/resources/templates/orders-details.html
+++ b/phone-commerce/src/main/resources/templates/orders-details.html
@@ -68,7 +68,7 @@
     </div>
 </section>
 <div id="buttonComeback">
-    <a href="/HomePage" class="beautiful-link">Quay Lại Trang Chủ</a>
+    <a href="/homepage" class="beautiful-link">Quay Lại Trang Chủ</a>
 </div>
 
 </body>
